--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -10,16 +10,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter text to be Advertised"/>
+        android:text="Enter text to be Advertised"
+        android:textSize="30sp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/getData"/>
+        android:id="@+id/getData"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
         <Button
             android:layout_width="wrap_content"
@@ -36,7 +40,13 @@
             android:text="Stop"/>
 
     </LinearLayout>
-
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Device is advertising"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        android:id="@+id/advertising"/>
 
 </LinearLayout>
