--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -1,52 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SendActivity"
+    android:layout_gravity="center"
+    android:focusableInTouchMode="true"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
         android:text="Enter text to be Advertised"
-        android:textSize="30sp"/>
+        android:textSize="30sp" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/getData"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"/>
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:hint="Text to advertise"
+        android:layout_marginTop="129dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="264dp"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:id="@+id/startSending"
-            android:text="Start"/>
-
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:id="@+id/stopSending"
-            android:text="Stop"/>
+            android:layout_marginStart="62dp"
+            android:text="Start" />
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/stopSending"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginEnd="70dp"
+            android:text="Stop" />
+
+    </RelativeLayout>
+
     <TextView
+        android:id="@+id/advertising"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Device is advertising"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="153dp"
+        android:text="     Device is advertising"
         android:textSize="30sp"
-        android:visibility="invisible"
-        android:id="@+id/advertising"/>
+        android:visibility="invisible" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/dispmac"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="210dp"
+        android:text=" "/>
+
+</RelativeLayout>
