--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -1,9 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PublishActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/messagemqtt"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="64dp" />
+
+    <Button
+        android:id="@+id/pubConnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/pubpub"
+        android:layout_toEndOf="@+id/pubpub"
+        android:text="Connect" />
+
+    <Button
+        android:id="@+id/pubpub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/pubDisconnect"
+        android:layout_marginStart="66dp"
+        android:text="Publish"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/pubDisconnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="184dp"
+        android:text="Disconnect"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/messagemqtt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-42dp"
+        android:text="Enter Text to Publish" />
+
+</RelativeLayout>
