--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -10,10 +10,11 @@
         android:id="@+id/messagemqtt"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp" />
+        android:layout_marginTop="81dp"
+        android:hint="Enter Publish Message"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/pubConnect"
@@ -52,5 +53,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-42dp"
         android:text="Enter Text to Publish" />
+
+    <EditText
+        android:id="@+id/ipinputpublish"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/messagemqtt"
+        android:hint="Enter IP" />
 
 </RelativeLayout>
