--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -52,4 +52,13 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="0dp"/>
 
+    <EditText
+        android:id="@+id/ipinputsubscribe"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="21dp"
+        android:hint="Enter IP" />
+
 </RelativeLayout>
