--- a/app/src/main/res/layout/activity_web_socket.xml
+++ b/app/src/main/res/layout/activity_web_socket.xml
@@ -4,34 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BLEMQTTSelect">
+    tools:context=".WebSocketActivity">
 
     <Button
-        android:id="@+id/ble"
+        android:id="@+id/wsstart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="88dp"
-        android:text="Bluetooth Low Energy" />
+        android:layout_marginTop="169dp"
+        android:text="Start" />
 
-    <Button
-        android:id="@+id/mqtt"
+    <TextView
+        android:id="@+id/wsmessages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="238dp"
-        android:text="MQTT" />
-
-    <Button
-        android:id="@+id/websocket"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="140dp"
-        android:text="WebSocket" />
-
+        android:layout_marginTop="24dp" />
 
 </RelativeLayout>
